--- a/viewer/index.html
+++ b/viewer/index.html
@@ -34,7 +34,7 @@
       <div id='node-banner'>
         <div id='node-banner-display'>
           <div id='node-title'>
-            <div id='node-name'><a href="" id='parent-back'>&lt;</a> <span id='node-name'></span> </div>
+            <div id='node-name'><a href="" id='parent-back'>&lt;</a> <span id='node-name'></span> <span id='node-version'></span></div>
             <div id='node-txid'>
                 <span id='node-publickey'></span><br>
                 <span id='node-txid'></span>
@@ -76,14 +76,6 @@
         </div>
       </div>
       <table class="repos-table">
-<!--        <thead>
-          <tr>
-            <td>Name</td>
-            <td>Description</td>
-            <td>Tx</td>
-            <td>Tip</td>
-          </tr>
-        </thead> -->
         <tbody>
         </tbody>
       </table>
@@ -93,7 +85,7 @@
       <tr>
         <td class="name"><a href=""></a></td>
         <td class="description"></td>
-        <td class="txid"></td>
+        <td class="version"></td>
         <td class="tip">
           <div id='money-button-container'>
             <div id='node-money-button'></div>
