Removed waiting for confirmation of funding transaction as it isn't required.

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -23,6 +23,9 @@
         </span>
         <span id='upload'>Upload a repository to metanet using <a href="https://github.com/jolonf/bsvpush">bsvpush</a></span>
       </div>
+      <div id="new-repo-btn-container">
+        <button id="new-repo-btn">+ New Repository</button>
+      </div>
       <div id='search-container'>
         <input id='search-input' type='text' placeholder='Transaction id'><button id='search-button'><i class="fa fa-search"></i></button>
       </div>
@@ -107,5 +110,10 @@
 
     <div id="spinner"><img width="100" height="100" src="img/spinner.svg"></div>
     <div id="footer-message"><p>metanet</p></div>
+
+    <div id="new-repo-overlay">
+      
+    </div>
+
   </body>
 </html>
